--- a/Front/index.html
+++ b/Front/index.html
@@ -6,7 +6,17 @@
     <title>Fetch</title>
 </head>
 <body>
-
+    <form action="http://localhost:5000/Register/pay">
+        <input type="number" name="amount" placeholder="add to credit">
+        <input type="email" name="email" placeholder="write your email">
+        <input type="text" name="mobile" placeholder="add to credit">
+        <input type="number" name="amount" placeholder="add to credit">
+    </form>
+    <form action="http://localhost:5000/Register/postUser">
+        <input type="text" name="Name" placeholder="write your name">
+        <input type="text" name="Password" placeholder="write your password">
+        <input type="email" name="Email" placeholder="add your Email">
+    </form>
 
 
 
