--- a/Front/index.html
+++ b/Front/index.html
@@ -11,11 +11,13 @@
         <input type="email" name="email" placeholder="write your email">
         <input type="text" name="mobile" placeholder="add to credit">
         <input type="number" name="amount" placeholder="add to credit">
+        <input type="submit" placeholder="submit">
     </form>
     <form action="http://localhost:5000/Register/postUser">
         <input type="text" name="Name" placeholder="write your name">
         <input type="text" name="Password" placeholder="write your password">
         <input type="email" name="Email" placeholder="add your Email">
+        <input type="submit" placeholder="submit">
     </form>
 
 
