--- a/Front/index.html
+++ b/Front/index.html
@@ -13,7 +13,7 @@
         <input type="number" name="amount" placeholder="add to credit">
         <input type="submit" placeholder="submit">
     </form>
-    <form action="http://localhost:5000/register/postUser">
+    <form action="http://localhost:5000/register/postUser" method="post">
         <input type="text" name="Name" placeholder="write your name">
         <input type="text" name="Password" placeholder="write your password">
         <input type="email" name="Email" placeholder="add your Email">
