--- a/Front/index.html
+++ b/Front/index.html
@@ -16,7 +16,7 @@
     <form action="http://localhost:5000/register/postUser" method="post">
         <input type="text" name="Name" placeholder="write your name">
         <input type="text" name="Password" placeholder="write your password">
-        <input type="email" name="Email" placeholder="add your Email">
+        <input type="text" name="Email" placeholder="add your Email">
         <input type="submit" placeholder="submit">
     </form>
 
