--- a/Front/userPane.html
+++ b/Front/userPane.html
@@ -8,6 +8,13 @@
 <body>
 
     <h1>Welcome!!!</h1>
+    <form method="post" class="login-form">
+        <input type="text" name="Email" placeholder="Email">
+        <input type="text" name="Password" placeholder="Password">
+        <input type="submit" placeholder="click">
+    </form>
     
+
+    <script src="./app.js"></script>
 </body>
 </html>
